# voiceflow

./: .gitignore  README.md  Start VoiceFlow.cmd  config.yaml  install-autostart.cmd  pyproject.toml  smoke_test.py
voiceflow/: __main__.py  cleanup.py  config.py  hotkey.py  injector.py  overlay.py  recorder.py  transcriber.py  tray.py
