[project]
name = "voiceflow"
version = "0.1.0"
description = "Local Wispr Flow-style dictation: hotkey, faster-whisper on GPU, LLM cleanup, paste at cursor"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9",
    "sounddevice>=0.5",
    "numpy",
    "keyboard>=0.13.5",
    "pystray>=0.19",
    "Pillow>=10",
    "pyperclip>=1.9",
    "anthropic>=0.40",
    "httpx>=0.27",
    "PyYAML>=6",
]

[project.scripts]
voiceflow = "voiceflow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voiceflow"]
